# python-babel-fish

./: pyproject.toml  setup.py
.github/workflows/: python-publish.yml
.pyarmor/: config
BabelFish/: authentication_exception.py  base_controller.py  callback_decorator.py  chained_use_case.py  composite_job_disposable.py  error_output.py  guard_exception.py  http_exception.py  internet_connection_exception.py  output.py  sequence_use_case.py  use_case.py  use_case_decorator.py  use_case_dispatcher.py  use_case_unit.py  value_out_put.py
ozymandias/: base_controller.py  callback_decorator.py  http_exception.py  internet_connection_exception.py  output.py  use_case.py  use_case_decorator.py  use_case_dispatcher.py  value_out_put.py
src/: base_controller.py  callback_decorator.py  chained_use_case.py  composite_job_disposable.py  error_output.py  guard_exception.py  sequence_use_case.py  use_case.py  use_case_decorator.py  use_case_dispatcher.py  use_case_unit.py  value_out_put.py
