
[project]
name = "babelfish"
version = "0.0.1"
authors = [
  { name="v2 software house", email="v2.softwarehouse@gmail.com" },
]
description = "A framework to drive a clean code"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/v2SoftwareHouse/python-babel-fish"
Issues = "https://github.com/v2SoftwareHouse/python-babel-fish/issues"
